--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,6 +22,8 @@ services:
       PORT: ${PORT}
       DATABASE_URL: ${DATABASE_URL}
       NODE_ENV: development
+    volumes:
+      - ./flash-resume-server:/usr/src/app
     depends_on:
       - postgres
     restart: always
