--- a/flash-resume-client/Dockerfile
+++ b/flash-resume-client/Dockerfile
@@ -8,14 +8,10 @@ RUN npm pkg delete scripts.prepare
 
 RUN npm install
 
-COPY . .
+COPY . /usr/src/app
 
 ENV NODE_ENV=development
 
-ENV CODE_DIR /usr/src/app
-
 ENV PORT=3000
-
-EXPOSE 3000
 
 CMD ["npm", "run", "dev"]
