--- a/flash-resume-server/package.json
+++ b/flash-resume-server/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "build": "rimraf ./dist && tsc",
-    "dev": "nodemon index.ts",
+    "dev": "nodemon -r dotenv/config index.ts",
     "start": "npm run build && node dist/index.js",
     "migrate": "npx prisma migrate dev --name init"
   },
