Added husky for precomits

--- a/flash-resume-client/tsconfig.json
+++ b/flash-resume-client/tsconfig.json
@@ -22,7 +22,8 @@
     "jsx": "react",
     "allowJs": true,
     "checkJs": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "rootDir": "./"
   },
   "include": ["src/**/**/*"],
   "exclude": ["node_modules"]
