--- a/flash-resume-client/package.json
+++ b/flash-resume-client/package.json
@@ -9,8 +9,7 @@
     "start": "webpack server --open",
     "dev": "npm-run-all -s build start",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "prepare": "husky install"
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -45,7 +44,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^5.5.3",
-    "husky": "^8.0.0",
     "jest": "^29.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
