--- a/package.json
+++ b/package.json
@@ -19,23 +19,30 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-  "husky": "^8.0.0",
-  "npm-run-all": "^4.1.5",
-  "@types/styled-components": "^5.1.26",
-  "@typescript-eslint/eslint-plugin": "^5.60.1",
-  "@typescript-eslint/eslint-plugin-tslint": "^5.60.1",
-  "@typescript-eslint/parser": "^5.60.1",
-  "eslint-config-airbnb": "^19.0.4",
-  "eslint-config-airbnb-typescript": "^17.0.0",
-  "eslint-config-prettier": "^8.8.0",
-  "eslint-config-react-app": "^7.0.1",
-  "eslint-plugin-import": "^2.27.5",
-  "eslint-plugin-jsx-a11y": "^6.7.1",
-  "eslint-plugin-prettier": "^4.2.1",
-  "eslint-plugin-react": "^7.32.2",
-  "eslint-plugin-react-hooks": "^4.6.0",
-  "eslint-webpack-plugin": "^4.0.1",
-  "eslint": "^8.44.0",
-  "prettier": "^2.8.8"
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.3",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.44.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^4.0.1",
+    "husky": "^8.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.1"
   }
 }
