--- a/flash-resume-client/package.json
+++ b/flash-resume-client/package.json
@@ -24,12 +24,17 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/eslint-plugin-tslint": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "babel-jest": "^29.6.1",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
     "eslint": "^8.44.0",
@@ -47,6 +52,7 @@
     "jest": "^29.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
+    "react-test-renderer": "^18.2.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
