Added / path for api route for testing and checking everything is connected

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "prepare": "husky install",
     "lint:server": "cd flash-resume-server && eslint .",
     "lint:client": "cd flash-resume-client && eslint .",
+    "dev:client": "cd flash-resume-client && npm run dev",
+    "dev:server": "cd flash-resume-server && npm run dev",
+    "dev": "npm-run-all -p dev:server dev:client",
     "setup": "npm-run-all -s setup:client setup:server",
     "setup:client": "cd flash-resume-client && npm i",
     "setup:server": "cd flash-resume-server && npm i",
