--- a/flash-resume-server/package.json
+++ b/flash-resume-server/package.json
@@ -25,6 +25,15 @@
   },
   "homepage": "https://github.com/SharjeelSIqbal/typescript-node-template#readme",
   "devDependencies": {
+    "eslint": "^8.44.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.3",
     "husky": "^8.0.0",
