--- a/flash-resume-client/package.json
+++ b/flash-resume-client/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.0.4"
