--- a/flash-resume-client/package.json
+++ b/flash-resume-client/package.json
@@ -52,6 +52,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
