--- a/flash-resume-client/package.json
+++ b/flash-resume-client/package.json
@@ -50,6 +50,9 @@
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.27",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^9.1.0",
     "prettier": "^2.8.8",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
