--- a/flash-resume-client/package.json
+++ b/flash-resume-client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --env=jsdom",
     "build": "webpack --config webpack.config.js",
     "start": "webpack server --open",
     "dev": "npm-run-all -s build start",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
+    "@types/react-test-renderer": "^18.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.0.4"
@@ -28,6 +29,7 @@
     "@react-spring/types": "^9.7.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -35,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/eslint-plugin-tslint": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "babel-jest": "^29.6.2",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
     "eslint": "^8.44.0",
@@ -50,11 +53,13 @@
     "eslint-webpack-plugin": "^4.0.1",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.27",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.1.0",
     "prettier": "^2.8.8",
+    "react-test-renderer": "^18.2.0",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
