--- a/flash-resume-client/tsconfig.json
+++ b/flash-resume-client/tsconfig.json
@@ -29,6 +29,6 @@
       "react-dom/client": ["./node_modules/react/react-dom-client"]
     }
   },
-  "include": ["src/**/**/*"],
+  "include": ["src/**/**/*", "jest-setup.ts"],
   "exclude": ["node_modules"]
 }
