--- a/flash-resume-client/package.json
+++ b/flash-resume-client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-spring/web": "^9.7.3",
     "@types/react-test-renderer": "^18.0.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.0.4"
