Added ability to modify and change values based on education index

--- a/flash-resume-client/tsconfig.json
+++ b/flash-resume-client/tsconfig.json
@@ -9,9 +9,8 @@
     "exactOptionalPropertyTypes": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitThis": true,
-    "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitReturns": true,
     "alwaysStrict": true,
     "strictBindCallApply": true,
