--- a/flash-resume-client/package.json
+++ b/flash-resume-client/package.json
@@ -18,7 +18,7 @@
     "overlayscrollbars-react": "^0.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.0.4"
+    "react-icons": "^4.10.1"
   },
   "keywords": [],
   "author": "",
