--- a/flash-resume-server/package.json
+++ b/flash-resume-server/package.json
@@ -12,7 +12,9 @@
     "dev": "nodemon -r dotenv/config index.ts",
     "dev:build": "npm-run-all -s build dev",
     "start": "npm run build && node dist/index.js",
-    "migrate": "npx prisma migrate dev --name init"
+    "migrate": "npx prisma migrate dev --name init",
+    "reset": "npx prisma migrate reset",
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -52,5 +54,8 @@
     "@prisma/client": "^5.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
+  },
+  "prisma": {
+    "seed": "ts-node ./prisma/seed/index.ts"
   }
 }
