--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "setup:client": "cd flash-resume-client && npm i",
     "setup:server": "cd flash-resume-server && npm i",
     "docker:dev": "docker compose -f docker-compose.dev.yml up",
+    "docker:dev:down": "docker compose -f docker-compose.dev.yml down",
     "docker:dev:build": "docker compose -f docker-compose.dev.yml up --build",
     "lint:fix:client": "cd flash-resume-client && eslint . --fix",
     "lint:fix:server": "cd flash-resume-server && eslint . --fix",
