--- a/flash-resume-client/package.json
+++ b/flash-resume-client/package.json
@@ -12,10 +12,10 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
-    "@react-spring/web": "^9.7.3",
-    "@types/react-test-renderer": "^18.0.0",
     "@testing-library/react": "^14.0.0",
+    "@types/react-test-renderer": "^18.0.0",
     "axios": "^1.4.0",
+    "framer-motion": "^10.16.4",
     "overlayscrollbars-react": "^0.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
