Added proxy to api with docker

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,30 @@
 version: '3.8'
 
 services:
+  api:
+    build:
+      context: ./flash-resume-server
+      target: development
+    container_name: flash-resume-server-dev
+    ports:
+      - '${PORT}:3001'
+      - '${DEBUG}:9229'
+    environment:
+      PORT: ${PORT}
+      DATABASE_URL: ${DATABASE_URL}
+      NODE_ENV: development
+      CHOKIDAR_USEPOLLING: true
+      WATCHPACK_POLLING: true
+    volumes:
+      - ./flash-resume-server:/usr/src/app
+    depends_on:
+      - postgres
+    stdin_open: true
+    tty: true
+    restart: always
+    networks:
+      - mynetwork
+
   client:
     build:
       context: ./flash-resume-client
@@ -18,29 +42,10 @@ services:
     restart: always
     depends_on:
       - postgres
-  api:
-    build:
-      context: ./flash-resume-server
-      target: development
-    container_name: flash-resume-server-dev
-    ports:
-      - '${PORT}:3001'
-      - '${DEBUG}:9229'
-    environment:
-      PORT: ${PORT}
-      DATABASE_URL: ${DATABASE_URL}
-      NODE_ENV: development
-      CHOKIDAR_USEPOLLING: true
-      WATCHPACK_POLLING: true
-    volumes:
-      - ./flash-resume-server:/usr/src/app
-    links:
-      - postgres
-    depends_on:
-      - postgres
-    stdin_open: true
-    tty: true
-    restart: always
+      - api
+    networks:
+      - mynetwork
+
   postgres:
     image: postgres:15
     container_name: postgres
@@ -52,5 +57,12 @@ services:
     restart: always
     volumes:
       - postgres:/var/lib/postgresql/data
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
+    driver: bridge
+
 volumes:
   postgres: ~
