--- a/flash-resume-server/package.json
+++ b/flash-resume-server/package.json
@@ -49,7 +49,8 @@
     "rimraf": "^5.0.1",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^0.34.5"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
