Added test database and added test client to docker dev and adjusted test file

--- a/flash-resume-server/env.example
+++ b/flash-resume-server/env.example
@@ -11,4 +11,5 @@ PGADMIN_PORT=5555
 PGADMIN_DEFAULT_EMAIL=pgadmin4@pgadmin.org
 PGADMIN_DEFAULT_PASSWORD=admin
 DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+DATABASE_URL_TEST=postgresql://testuser:testpassword@localhost:5433/testdb
 MANAGEMENT_API_SECRET=secretapimanagement
