--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,7 +24,6 @@ services:
     restart: always
     networks:
       - mynetwork
-
   client:
     build:
       context: ./flash-resume-client
@@ -45,7 +44,6 @@ services:
       - api
     networks:
       - mynetwork
-
   postgres:
     image: postgres:15
     container_name: postgres
@@ -59,7 +57,16 @@ services:
       - postgres:/var/lib/postgresql/data
     networks:
       - mynetwork
-
+  postgres-test:
+    image: postgres:latest
+    ports:
+      - '5433:5432'
+    environment:
+      POSTGRES_USER: testuser
+      POSTGRES_PASSWORD: testpassword
+      POSTGRES_DB: testdb
+    networks:
+      - mynetwork
 networks:
   mynetwork:
     driver: bridge
