--- a/flash-resume-server/package.json
+++ b/flash-resume-server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "generate": "npx prisma generate",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint .",
     "build": "rimraf ./dist && tsc",
     "dev": "nodemon -r dotenv/config index.ts",
@@ -34,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/eslint-plugin-tslint": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "@vitest/coverage-v8": "^0.34.6",
     "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -49,12 +51,14 @@
     "rimraf": "^5.0.1",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^0.34.6"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "vite": "^4.4.11"
   },
   "prisma": {
     "seed": "ts-node ./prisma/seed/index.ts"
