--- a/flash-resume-server/tsconfig.json
+++ b/flash-resume-server/tsconfig.json
@@ -16,5 +16,5 @@
     "esm": true
   },
   "include": ["server/**/**/*", "prisma/**/**/*","./index.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "coverage"]
 }
