--- a/flash-resume-server/package.json
+++ b/flash-resume-server/package.json
@@ -31,7 +31,9 @@
   "homepage": "https://github.com/SharjeelSIqbal/typescript-node-template#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.5",
     "@types/node": "^20.3.3",
+    "@types/supertest": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/eslint-plugin-tslint": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
@@ -49,6 +51,8 @@
     "prettier": "^2.8.8",
     "prisma": "^5.0.0",
     "rimraf": "^5.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
