--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -27,7 +27,7 @@ services:
   prisma-studio:
     build:
       context: ./flash-resume-server # Assuming this is where your Prisma schema is
-      target: development
+      target: prisma-studio
     container_name: prisma-studio-dev
     ports:
       - '${PRISMA_STUDIO}:5555' # Expose Prisma Studio on port 5555
@@ -38,6 +38,7 @@ services:
       CHOKIDAR_USEPOLLING: true
       WATCHPACK_POLLING: true
     depends_on:
+      - api
       - postgres
     networks:
       - mynetwork
