--- a/flash-resume-server/package.json
+++ b/flash-resume-server/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "Typescript node template with jest and express",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "generate": "npx prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "build": "rimraf ./dist && tsc",
-    "dev": "nodemon -r dotenv/config index.ts",
+    "dev": "tsx watch -r dotenv/config index.ts",
     "dev:build": "npm-run-all -s build dev",
     "start": "npm run build && node dist/index.js",
     "migrate": "npx prisma migrate dev --name init",
@@ -43,13 +42,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.0",
     "jest": "^29.5.0",
-    "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "prisma": "^5.0.0",
     "rimraf": "^5.0.1",
     "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.1.6",
     "vitest": "^0.34.5"
   },
