--- a/flash-resume-server/package.json
+++ b/flash-resume-server/package.json
@@ -14,7 +14,7 @@
     "migrate": "npx prisma migrate dev --name init",
     "reset": "npx prisma migrate reset",
     "lint:fix": "eslint . --fix",
-    "seed": "ts-node ./prisma/seed/index.ts",
+    "seed": "tsx ./prisma/seed/index.ts",
     "studio": "npx prisma studio"
   },
   "repository": {
@@ -57,6 +57,6 @@
     "express": "^4.18.2"
   },
   "prisma": {
-    "seed": "ts-node ./prisma/seed/index.ts"
+    "seed": "tsx ./prisma/seed/index.ts"
   }
 }
