--- a/jawbs-client/package.json
+++ b/jawbs-client/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --env=jsdom",
+    "build:vite": "vite build",
+    "start:vite": "vite --host --port 3000",
     "build": "webpack --config webpack.config.js",
     "start": "webpack server --open",
     "dev": "npm-run-all -s build start",
+    "dev:vite": "npm-run-all -s start:vite",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
@@ -44,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/eslint-plugin-tslint": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "babel-jest": "^29.6.2",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
@@ -73,6 +77,7 @@
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
+    "vite": "^5.1.4",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
