--- a/jawbs-client/package.json
+++ b/jawbs-client/package.json
@@ -78,6 +78,7 @@
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.4",
+    "vite-plugin-eslint": "^1.8.1",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
