--- a/jawbs-client/.eslintignore
+++ b/jawbs-client/.eslintignore
@@ -1,5 +1,4 @@
 webpack.config.js
-dist/client/client_bundle.js
 .eslintrc.js
 ./node_modules
 tailwind.config.js
@@ -7,3 +6,4 @@ postcss.config.js
 babel.config.js
 jest.config.js
 jest-setup.ts
+dist
