--- a/jawbs-client/package.json
+++ b/jawbs-client/package.json
@@ -5,12 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --env=jsdom",
-    "build:vite": "vite build",
-    "start:vite": "vite --host --port 3000",
-    "build": "webpack --config webpack.config.js",
-    "start": "webpack server --open",
+    "build": "vite build",
+    "start": "vite --host --port 3000",
     "dev": "npm-run-all -s build start",
-    "dev:vite": "npm-run-all -s start:vite",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
@@ -27,6 +24,11 @@
     "react-icons": "^4.10.1",
     "react-phone-number-input": "^3.3.9",
     "sort-by": "^1.2.0"
+  },
+  "overrides": {
+    "vite": {
+      "rollup": "npm:@rollup/wasm-node"
+    }
   },
   "keywords": [],
   "author": "",
@@ -61,8 +63,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-webpack-plugin": "^4.0.1",
-    "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "npm-run-all": "^4.1.5",
@@ -72,15 +72,15 @@
     "prettier": "^2.8.8",
     "react-router-dom": "^6.22.0",
     "react-test-renderer": "^18.2.0",
+    "rollup": "^4.12.0",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.4",
+    "vite-plugin-babel": "^1.2.0",
     "vite-plugin-eslint": "^1.8.1",
-    "webpack": "^5.88.1",
-    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
 }
