--- a/jawbs-client/tsconfig.json
+++ b/jawbs-client/tsconfig.json
@@ -32,5 +32,5 @@
     }
   },
   "include": ["src/**/**/*", "jest-setup.ts", "index.d.ts", "vite.config.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
