--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,11 +26,11 @@ services:
       - jawbs
   prisma-studio:
     build:
-      context: ./jawbs-server # Assuming this is where your Prisma schema is
+      context: ./jawbs-server
       target: prisma-studio
     container_name: prisma-studio-dev
     ports:
-      - '${PRISMA_STUDIO}:5555' # Expose Prisma Studio on port 5555
+      - '${PRISMA_STUDIO}:5555'
     command: npm run studio
     environment:
       DATABASE_URL: ${DATABASE_URL}
