--- a/jawbs-server/package.json
+++ b/jawbs-server/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "build": "rimraf ./dist && tsc",
     "dev": "tsx watch -r dotenv/config index.ts",
-    "dev:build": "npm-run-all -s reset build dev",
+    "dev:build": "npm-run-all -s build dev",
     "start": "npm run build && node dist/index.js",
     "migrate": "npx prisma migrate dev --name init",
     "reset": "npx prisma migrate reset",
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/SharjeelSIqbal/typescript-node-template#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.3.3",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/eslint-plugin-tslint": "^5.60.1",
@@ -53,8 +54,11 @@
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
+    "argon2": "^0.40.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "ts-custom-error": "^3.3.1"
   },
   "prisma": {
     "seed": "tsx ./prisma/seed/index.ts"
