#17 created simple sign in

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,6 +24,7 @@ services:
     restart: always
     networks:
       - jawbs
+    command: npm run dev
   prisma-studio:
     build:
       context: ./jawbs-server
