#17 added json web token payload

--- a/jawbs-server/.prettierrc
+++ b/jawbs-server/.prettierrc
@@ -7,5 +7,6 @@
   "bracketSpacing": true,
   "singleAttributePerLine": false,
   "singleQuote": false,
-  "bracketSameLine": false
+  "bracketSameLine": false,
+  "printWidth": 100
 }
