--- a/jawbs-client/package.json
+++ b/jawbs-client/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-phone-number-input": "^3.3.9",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "universal-cookie": "^7.1.0"
   },
   "overrides": {
     "vite": {
