--- a/jawbs-server/package.json
+++ b/jawbs-server/package.json
@@ -32,6 +32,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.3.3",
+    "@types/nodemailer": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/eslint-plugin-tslint": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
@@ -58,6 +59,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.12",
     "ts-custom-error": "^3.3.1"
   },
   "prisma": {
