--- a/jawbs-server/env.example
+++ b/jawbs-server/env.example
@@ -4,7 +4,6 @@ DB_NAME=postgres_dev
 DB_PASSWORD=postgres_dev
 DB_USER=postgres
 DB_PORT=5432
-SECRET_TOKEN=secrethushushtoken
 PORT=3001
 PRISMA_PORT=3002
 PGADMIN_PORT=5555
@@ -13,3 +12,7 @@ PGADMIN_DEFAULT_PASSWORD=admin
 DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 DATABASE_URL_TEST=postgresql://testuser:testpassword@localhost:5433/testdb
 MANAGEMENT_API_SECRET=secretapimanagement
+EMAIL_USERNAME=email@email.com
+EMAIL_PASSWORD=password
+EMAIL_PORT=587
+EMAIL_HOST="smtp.gmail.com"
