--- a/jawbs-server/env.example
+++ b/jawbs-server/env.example
@@ -5,6 +5,7 @@ DB_PASSWORD=postgres_dev
 DB_USER=postgres
 DB_PORT=5432
 PORT=3001
+HOST_PORT=3000
 HOST=localhost
 PRISMA_PORT=3002
 PGADMIN_PORT=5555
